[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "graph_app_token"
version = "0.2.0"
description = "A Python package for Microsoft Graph API token authentication"
authors = [
    { name="lucasjkr" }
]
license = { text = "MIT" }
dependencies = [
    "requests"
]